--- a/.github/workflows/RunCodeFromIssue.yml
+++ b/.github/workflows/RunCodeFromIssue.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
     - name: Create User Name File
-      run: echo "${{ github.event.issue.user }}" > name.txt
+      run: echo "${{ github.event.issue.user.login }}" > name.txt
     - name: Write Python code to file
       run: node WritePythonFile.js
       env:
